<resources>
    <string name="title_perfil">Perfil</string>
    <string name="app_name">Proyecto final</string>
    <string name="title_inicio">Recordatorios</string>
    <string name="title_metas">Metas</string>
    <string name="title_estadisticas">Estadísticas</string>
    <string name="title_tips">Tips</string>
    <string name="title_activity_tip">tip</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_subtitle">Surprise!</string>

    <string name="notification_schedule_title">Schedule notification:\u00a0</string>
    <string name="notification_schedule_pattern">dd.MM.yy \u00B7 HH:mm</string>
    <string name="notification_schedule_error">
        </string>
    Schedule notification: Incorrect Date and Time

</resources>