<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_metas" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Perfil" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_estadisticas" />
    <item
        android:id="@+id/navigation_tips"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="Tips" />

</menu>