<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mx.itesm.cerco.proyectofinal.ui.inicio.RecordatorioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="mx.itesm.cerco.proyectofinal.ui.metas.MetasFragment"
        android:label="@string/title_metas"
        tools:layout="@layout/fragment_metas" >
        <action
            android:id="@+id/action_navigation_dashboard_to_detalleMetaFragment"
            app:destination="@id/detalleMetaFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="mx.itesm.cerco.proyectofinal.ui.estadisticas.EstadisticasFragment"
        android:label="@string/title_estadisticas"
        tools:layout="@layout/fragment_estadisticas" >
        <action
            android:id="@+id/action_navigation_notifications_to_estadisticas_detail"
            app:destination="@id/navigation_estadisticas_detail"
            app:popUpTo="@+id/main_nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_tips"
        android:name="mx.itesm.cerco.proyectofinal.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" >
        <action
            android:id="@+id/action_navigation_tips_to_detalleTip2"
            app:destination="@id/navigation_tip2" />
    </fragment>
    <fragment
        android:id="@+id/navigation_tip2"
        android:name="mx.itesm.cerco.proyectofinal.ui.tips.DetalleTip"
        android:label="Tip"
        tools:layout="@layout/detalle_tip_fragment">
        <argument
            android:name="tipSeleccionado"
            app:argType="mx.itesm.cerco.proyectofinal.ui.tips.model.Tip" />
    </fragment>
  <fragment
        android:id="@+id/navigation_perfil"
        android:name="mx.itesm.cerco.proyectofinal.ui.Perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/detalleMetaFragment"
        android:name="mx.itesm.cerco.proyectofinal.ui.metas.DetalleMetaFragment"
        android:label="fragment_detalle_meta">
        <argument
            android:name="meta"
            app:argType="mx.itesm.cerco.proyectofinal.ui.model.Meta" />
    </fragment>
    <fragment
        android:id="@+id/navigation_estadisticas_detail"
        android:name="mx.itesm.cerco.proyectofinal.ui.estadisticas.Estadisticas_detail"
        android:label="estadisticas_detail_fragment"
        tools:layout="@layout/estadisticas_detail_fragment" />
</navigation>